# memgit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PUBLISHING.md  README.md  TEST_REPORT.md  USAGE.md  llm-tool-definitions.json  openapi.json  pyproject.toml
.github/workflows/: choco-publish.yml  npm-publish.yml  publish.yml
Formula/: memgit.rb
chocolatey/: memgit.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
claude-plugin/: .mcp.json  CLAUDE.md
memgit/: __init__.py  cli.py  delivery.py  gitdigest.py  graph.py  hooks.py  http_server.py  importer.py  links.py  mcp_server.py  models.py  project.py  repo.py  scorer.py  store.py  tokens.py  toon.py  usage.py
memgit/cloud/: __init__.py  client.py  commands.py  crypto.py  state.py  sync.py
npm-wrapper/: package.json
tests/: conftest.py  test_accrue.py  test_advanced.py  test_aliases.py  test_core.py  test_delivery.py  test_setup.py  test_store_repo.py  test_toon.py  test_v020.py  test_v030.py  test_v040.py  test_v060.py  test_v070.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: daemonClient.ts  extension.ts  memoryTreeProvider.ts
winget/manifests/c/code4161/memgit/0.1.0/: code4161.memgit.yaml
